--- a/restaurant.html
+++ b/restaurant.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" lang="en">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Description" content="This app shows restaurants and the review the received from customers.">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
