--- a/restaurant.html
+++ b/restaurant.html
@@ -59,7 +59,7 @@
     <!-- End reviews -->
   </main>
   <!-- End main -->
-
+<section class="snackbar" id="snackbar"></section>
   <!-- Beginning footer -->
   <footer id="footer">
     Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
