--- a/restaurant.html
+++ b/restaurant.html
@@ -34,7 +34,7 @@
                 <h1><a href="/">Restaurant Reviews</a></h1>
             </nav>
             <!-- Beginning breadcrumb -->
-            <nav>
+            <nav role="navigation">
                 <ul id="breadcrumb" aria-label="navigation breadcrumb">
                     <li><a href="/">Home</a></li>
                 </ul>
